fix(backend): resolve or suppress sonarlint findings